# postcodes

./: .gitignore  Cargo.toml  README.md  build.rs
data/index/: alpha2_to_alpha3.csv  alpha2_to_code.csv  code_to_alpha2.csv
scripts/: process.py
src/: lib.rs
src/codes/: ala.rs  and.rs  arg.rs  asm.rs  aus.rs  aut.rs  aze.rs  bel.rs  bgd.rs  bgr.rs  blr.rs  bmu.rs  bra.rs  can.rs  che.rs  chl.rs  col.rs  cri.rs  cyp.rs  cze.rs  deu.rs  dnk.rs  dom.rs  dza.rs  ecu.rs  est.rs  fin.rs  fro.rs  fsm.rs  gbr.rs  ggy.rs  glp.rs  grl.rs  gtm.rs  guf.rs  gum.rs  hrv.rs  hti.rs  hun.rs  imn.rs  (+44 more)
