[package]
name = "postcodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
isocountry = "0.3.2"
once_cell = "1.18.0"
quadtree_rs = "0.1.3"
serde = { version = "1.0.193", features = ["derive"]}

[build-dependencies]
csv = "1.3.0"